# zephyr-bazel

./: .bazelrc  .gitignore  .gitmodules  MODULE.bazel  README.md  WORKSPACE
src/: BUILD.bazel  echo.cc
src/pw_devicetree/: BUILD.bazel  docs.rst  zephyr.BUILD
src/pw_devicetree/api_test/: api_test.cc  devicetree_generated.h  dts_out.dts  preprocessed.dts
src/pw_devicetree/public/pw_devicetree/internal/zephyr_stubs/: kobj-types-enum.h  syscall_list.h
src/pw_devicetree_betty/: BUILD.bazel  mimxrt595_dts_out.dts  mimxrt595_evk_cm33_preprocessed.dts
src/pw_devicetree_betty/public_overrides/: devicetree_generated.h
targets/: BUILD.bazel
